--- a/logitreg/NAMESPACE
+++ b/logitreg/NAMESPACE
@@ -3,10 +3,9 @@
 S3method(fitted,logitreg)
 S3method(logitreg,default)
 S3method(logitreg,formula)
+S3method(plot,logitreg)
 S3method(predict,logitreg)
 export(logitreg)
 export(sim_data)
 import(stats)
-importFrom(checkmate,assert_data_frame)
-importFrom(checkmate,assert_true)
-importFrom(stats,predict)
+importFrom(graphics,plot)
